<resources>
    <string name="open_drawer">open drawer left</string>
    <string name="close_drawer">close drawer left</string>
    <string name="nv_home">@string/common_home</string>
    <string name="nv_notify">@string/common_alert</string>
    <string name="nv_online_alarm">@string/common_online_alarm</string>
    <string name="nv_list_block">Danh sách chặn</string>
    <string name="nv_setting_account">@string/common_setting_account</string>
    <string name="nv_setting_notify">Thiết lập thông báo</string>
    <string name="menu_top">@string/common_home</string>
    <string name="menu_friends">@string/common_friends</string>
    <string name="menu_live_stream">Live Stream</string>
    <string name="menu_message">@string/common_message</string>
    <string name="menu_profile">Cá nhân</string>
    <string name="menu_notify">@string/common_alert</string>
    <string name="menu_search">@string/common_search</string>
    <string name="login_with_facebook">Đăng nhập bằng Facebook</string>
    <string name="account_locked_user">Tài khoản này đã bị khóa. Hãy liên hệ với người quản trị</string>
    <string name="invalid_birthday">Ngày sinh không hợp lệ</string>
    <string name="billing_unavaiable">Không thể sử dụng thanh toán</string>
    <string name="purchase_already_perform">Giao dịch đã hoàn thành</string>
    <string name="add_friends_sms_error">Gửi SMS thất bại</string>
    <string name="add_friends_email_error">Gửi email thất bại</string>
    <string name="msg_common_server_unknown_error">Lỗi không xác định. Hãy thử lại sau</string>
    <string name="msg_common_server_data_format">Dữ liệu không đúng,vui lòng liên hệ admin</string>
    <string name="error_age_min_bigger_max">Vui lòng chọn một độ tuổi nhỏ hơn giá trị tối đa</string>
    <string name="title_error_user_age">Lỗi tuổi</string>
    <string name="msg_common_can_not_connect_to_server">Không thể kết nối được đến máy chủ</string>
    <string name="msg_common_no_connection">Mạng không ổn định</string>
    <string name="msg_common_no_data">Không có dữ liệu</string>
    <string name="msg_common_unknown_error">Lỗi không xác định</string>
    <string name="msg_common_parse_json_error">Lỗi phân tích JSON</string>
    <string name="msg_common_phone_not_found">Không tìm thấy số điện thoại</string>
    <string name="msg_common_phone_has_already">Số điện thoại này đã được đăng ký trước</string>
    <string name="msg_common_email_not_found">Không tìm thấy địa chỉ email</string>
    <string name="msg_common_email_has_already">Địa chỉ email này đã từng được đăng ký từ trước</string>
    <string name="msg_common_invalid_username">Tên người dùng không hợp lệ</string>
    <string name="msg_common_invalid_email">Địa chỉ email không hợp lệ</string>
    <string name="msg_common_invalid_token">Token không hợp lệ</string>
    <string name="msg_common_invalid_password">Mật khẩu không hợp lệ</string>
    <string name="msg_common_password_is_incorrect">Mật khẩu bị sai</string>
    <string name="msg_common_send_email_fail">Gửi email thất bại</string>
    <string name="msg_common_incorrect_code">Mã xác thực sai</string>
    <string name="msg_common_data_format_wrong">Định dạng dữ liệu không hợp lệ</string>
    <string name="msg_common_error_authen_chatserver">Không thể kết nối được với máy chủ trò chuyện</string>
    <string name="no_internet">Không có kết nối mạng</string>
    <string name="no_storage_card">Không có thẻ tín dụng</string>
    <string name="not_enough_space">Không đủ dung lượng</string>
    <string name="action_is_not_performed">Thao tác không hợp lệ</string>
    <string name="application_version_invalid">Vì phiên bản mới nhất đã có nên hãy nâng cấp</string>
    <string name="do_you_want_close_app">Bạn có muốn đóng ứng dụng không?</string>
    <string name="do_you_want_close_live_stream">Bạn có muốn dừng phát trực tiếp không?</string>
    <string name="view_error">
        <![CDATA[<b>Đã phát sinh lỗi vui lòng liên hệ ban quản trị với thông tin sau:</b><br/><font color=#e02730>%1$s</font>]]>
    </string>
    <string name="view_error_2">
       Đã phát sinh lỗi vui lòng liên hệ ban quản trị
    </string>
    <string name="not_enough_point_title">Bạn đang bị thiếu xu</string>
    <string name="need_update_app">Hãy nâng cấp ứng dụng từ Google Play thành phiên bản mới nhất</string>
    <string name="must_unlock_to_view">Cần mở khóa để xem màn hình này</string>
    <string name="dirty_word_alert_content">(\"%1$s\") là từ không thể dùng. Hãy nhập từ khác</string>
    <string name="user_deactive">Không trực tuyến</string>
    <string name="dialog_confirm_report_user_content">Cảm ơn bạn đã báo cáo, chúng tôi sẽ sớm kiểm tra người dùng này</string>
    <string name="dialog_confirm_report_user_title">Báo cáo người dùng</string>
    <string name="hint_email">@string/common_email_address</string>
    <string name="hint_password">@string/common_password</string>
    <string name="remember_login">Lưu mật khẩu</string>
    <string name="forgot_password"><u>Bạn quên mật khẩu</u></string>
    <string name="other_login_option">Đăng nhập bằng cách khác</string>
    <string name="btn_facebook">Facebook</string>
    <string name="login_facebook_fail">Đăng nhập với facebook không thành công</string>
    <string name="login_facebook_cancel">Hủy đăng nhập với facebook</string>
    <string name="hint_date_of_birth">Ngày sinh</string>
    <string name="hint_confirm_password">Nhập lại mật khẩu</string>
    <string name="other_signup_option">Đăng ký khác</string>
    <string name="hint_recovery_email">Xin hãy nhập email đã dùng khi đăng ký</string>
    <string name="recovery_password">Gửi</string>
    <string name="msg_recovery_password">Mật khẩu mới đã được gửi về email của bạn</string>
    <string name="time_hour_ago">giờ trước</string>
    <string name="time_minute_ago">phút trước</string>
    <string name="menu_new_feed_all">@string/common_all</string>
    <string name="menu_new_feed_favorite">@string/common_favorite</string>
    <string name="timeline_like">%1$s yêu thích</string>
    <string name="timeline_comment">%1$s bình luận</string>
    <string name="timeline_share">%1$s chia sẻ</string>
    <string name="timeline_audio_share" formatted="false">%1$s đã mời bạn cùng nghe</string>
    <string name="noti_tag_buzz" >%1$s đã gắn thẻ bạn trong 1 bài viết</string>
    <string name="item_buzz_list_owner_received_a_gift">%1$s có món quà</string>
    <string name="year_hour_ago">năm trước</string>
    <string name="timeline_time_location">%1$s • %2$s</string>
    <string name="timeline_time_on">Trực tiếp %1$s</string>
    <string name="timeline_time_off">Kết thúc %1$s</string>
    <string name="timeline_time_and">\u0020và\u0020</string>
    <string name="timeline_time_with">\u0020cùng với\u0020</string>
    <string name="timeline_time_share_audio"><![CDATA[&#032;đã chia sẻ <font color=#000000>audio</font> của&#032;]]></string>
    <string name="timeline_time_share_video"><![CDATA[&#032;đã chia sẻ <font color=#000000>video</font> của&#032;]]></string>
    <string name="timeline_time_live_stream_off">\u0020đã phát trực tiếp</string>
    <string name="timeline_time_live_stream_on">\u0020đang phát trực tiếp</string>
    <string name="timeline_time_other">%1$s người khác</string>
    <string name="timeline_time_view">%1$s lượt xem</string>
    <string name="tab_timeline">Dòng thời gian</string>
    <string name="tab_album">Album của</string>
    <string name="tab_album_me">Album của tôi</string>
    <string name="tab_video_audio">Video/Audio</string>
    <string name="timeline_post_status_preparing_data">Đang chuẩn bị dữ liệu</string>
    <string name="timeline_post_status_progress">Đang chuẩn bị dữ liệu</string>
    <string name="timeline_post_status_posting_status">Chuẩn bị dữ liệu thành công\nĐang đăng trạng thái</string>
    <string name="share_facebook">chia sẻ facebook</string>
    <string name="share_wall">chia sẻ lên tường</string>
    <string name="share_instagram">chia sẻ instagram</string>
    <string name="load_end">Tải dữ liệu kết thúc</string>
    <string name="fragment_friends_favorited_search">Tìm kiếm</string>
    <string name="forgot_password_title">Cài đặt lại mật khẩu</string>
    <string name="hint_auth_code">Mã xác thực</string>
    <string name="hint_new_pwd">Nhập mật khẩu mới</string>
    <string name="hint_new_confirm_pwd">Xác nhập lại mật khẩu mới</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="change_password_title">Cài đặt lại mật khẩu</string>
    <string name="delete_message">Xóa chọn</string>
    <string name="delete_all_message">Xóa tất cả</string>
    <string name="read_all_message">Xem toàn bộ</string>
    <string name="delete_all_message_confirm">Bạn có muốn xóa hết tin nhắn hiện tại không?</string>
    <string name="mark_all_mesage_as_read_confirm">Bạn có muốn đánh dấu tất cả là đã đọc không?</string>
    <string name="delete_item_message_confirm">Bạn có muốn xóa tin nhắn này không?</string>
    <string name="comment_entry_hint">Viết một bình luận</string>
    <string name="sub_comment_entry_hint">Trả lời một bình luận</string>
    <string name="title_activity_search_setting">Cài đặt tìm kiếm</string>
    <string name="title_fragment_favorite_me">@string/common_favorited</string>
    <string name="title_fragment_me_favorite">@string/common_favorite</string>
    <string name="title_activity_search_result">Kết quả tìm kiếm</string>
    <string name="title_dialog_set_range_age">Tìm kiếm trong độ tuổi</string>
    <string name="title_fragment_area">@string/common_area</string>
    <string name="title_dialog_search_avatar">Ảnh đại diện</string>
    <string name="title_dialog_search_body">Hình thể</string>
    <string name="title_dialog_search_sort_oder">Thứ tự sắp xếp</string>
    <string name="search_result_un_favorited">Bỏ yêu thích thành công</string>
    <string name="search_result_favorited">Thích thành công!</string>
    <string name="search_result_add_favorite_fail">User đã bị block không thể thêm vào danh sách yêu thích</string>
    <string name="search_result_add_favorite_user_not_found">Người dùng không tồn tại</string>
    <string name="title_search_by_name">Tìm kiếm theo tên</string>
    <string name="title_search_setting_layout">Đối tượng tìm kiếm</string>
    <string name="act_search_setting_age">@string/common_age</string>
    <string name="act_search_setting_regions">@string/common_area</string>
    <string name="act_search_setting_gender">@string/common_gender</string>
    <string name="act_search_setting_login_24">Đăng nhập trong 24 giờ</string>
    <string name="act_search_setting_sort_order">Thứ tự sắp xếp</string>
    <string name="act_search_setting_sort_body_type">Hình thể</string>
    <string name="act_search_setting_avatar">Ảnh đại diện</string>
    <string name="act_search_setting_not_interacted">Người dùng chưa tương tác</string>
    <string name="act_search_by_name">Tìm kiếm theo tên</string>
    <string name="act_search_button">@string/common_search</string>
    <string name="nv_logout">Đăng xuất</string>
    <string name="notification_setting_title">Nhận tin nhắn</string>
    <string name="notification_setting_all">Tất cả</string>
    <string name="notification_setting_no_one">Không ai</string>
    <string name="notification_setting_only_favorite_2">Chỉ nhận những người yêu thích</string>
    <string name="evaluate_gentle"># Gently</string>
    <string name="evaluate_funny"># Funny</string>
    <string name="evaluate_sweet"># Sweet</string>
    <string name="evaluate_powerful"># Powerful</string>
    <string name="evaluate_friendly"># Friendly</string>
    <string name="evaluate_warm"># Warm</string>
    <string name="evaluate_tough"># Tough</string>
    <string name="evaluate_sexy"># Sexy</string>
    <string name="evaluate_cool"># Cool</string>
    <string name="evaluate_soft"># Soft</string>
</resources>