<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.vn.ntsc.widget.toolbar.ToolbarTitleCenter
        android:id="@+id/toolbar"
        app:text_title="@string/change_password_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <!--make view scrollable-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_ed_change_pwd">

        <!--why i create 2 linear layout?-->
        <!--one for border rounded, other for container because scroll only contain 1 child-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_edittext_no_padding"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/activity_change_passsword_auth_code"
                    style="@style/change_pwd_input"
                    android:hint="@string/hint_auth_code"
                    android:inputType="text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line"
                    android:background="@color/red" />

                <EditText
                    android:id="@+id/activity_change_passsword_password"
                    style="@style/change_pwd_input"
                    android:hint="@string/hint_new_pwd"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line"
                    android:background="@color/red" />

                <EditText
                    android:id="@+id/activity_change_passsword_confirm_password"
                    style="@style/change_pwd_input"
                    android:hint="@string/hint_new_confirm_pwd"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/activity_change_passsword_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_ed_change_pwd"
                android:background="@drawable/bg_border_button"
                android:text="@string/change_password"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
