<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <com.nankai.designlayout.BorderView
        android:id="@+id/tv_tough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1_6dp"
        android:padding="@dimen/spacing_1_8dp"
        fancy:fb_borderColor="@color/color_tough"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        fancy:fb_text="@string/evaluate_tough"
        fancy:fb_textColor="@color/color_tough"
        fancy:fb_textSize="@dimen/text_3_14sp" />

    <com.nankai.designlayout.BorderView
        android:id="@+id/tv_sexy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1_6dp"
        android:padding="@dimen/spacing_1_8dp"
        fancy:fb_borderColor="@color/color_sexy"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        fancy:fb_text="@string/evaluate_sexy"
        fancy:fb_textColor="@color/color_sexy"
        fancy:fb_textSize="@dimen/text_3_14sp" />

    <com.nankai.designlayout.BorderView
        android:id="@+id/tv_cool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1_6dp"
        android:padding="@dimen/spacing_1_8dp"
        fancy:fb_borderColor="@color/color_cool"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        fancy:fb_text="@string/evaluate_cool"
        fancy:fb_textColor="@color/color_cool"
        fancy:fb_textSize="@dimen/text_3_14sp" />

    <com.nankai.designlayout.BorderView
        android:id="@+id/tv_soft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1_6dp"
        android:padding="@dimen/spacing_1_8dp"
        fancy:fb_borderColor="@color/color_soft"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        fancy:fb_text="@string/evaluate_soft"
        fancy:fb_textColor="@color/color_soft"
        fancy:fb_textSize="@dimen/text_3_14sp" />

</LinearLayout>