<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/fuck"
    android:orientation="horizontal">

    <com.nankai.designlayout.BorderView
        android:id="@+id/tv_gently"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1_6dp"
        android:padding="@dimen/spacing_1_8dp"
        fancy:fb_borderColor="@color/color_gently"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        fancy:fb_text="@string/evaluate_gentle"
        fancy:fb_textColor="@color/color_gently"
        fancy:fb_textSize="@dimen/text_3_14sp" />


    <com.nankai.designlayout.BorderView
        android:id="@+id/tv_funny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1_6dp"
        android:padding="@dimen/spacing_1_8dp"
        fancy:fb_borderColor="@color/color_funny"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        fancy:fb_text="@string/evaluate_funny"
        fancy:fb_textColor="@color/color_funny"
        fancy:fb_textSize="@dimen/text_3_14sp" />

    <com.nankai.designlayout.BorderView
        android:id="@+id/tv_sweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1_6dp"
        android:padding="@dimen/spacing_1_8dp"
        fancy:fb_borderColor="@color/color_sweet"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="3dp"
        fancy:fb_text="@string/evaluate_sweet"
        fancy:fb_textColor="@color/color_sweet"
        fancy:fb_textSize="@dimen/text_3_14sp" />

</LinearLayout>