<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.vn.ntsc.widget.toolbar.ToolbarTitleCenter
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:type_button_right="text"
        app:text_title="@string/forgot_password_title" />

    <TextView
        android:id="@+id/activity_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/toolbar_padding_item"
        android:layout_marginLeft="@dimen/toolbar_padding_item"
        android:layout_marginRight="@dimen/toolbar_padding_item"
        android:layout_marginStart="@dimen/toolbar_padding_item"
        android:layout_marginTop="@dimen/toolbar_padding_item"
        android:text="@string/hint_recovery_email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_4_medium_16sp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/activity_forgot_password_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/toolbar_padding_item"
        android:layout_marginLeft="@dimen/toolbar_padding_item"
        android:layout_marginRight="@dimen/toolbar_padding_item"
        android:layout_marginStart="@dimen/toolbar_padding_item"
        android:hint="@string/common_enter_email"
        android:layout_marginTop="@dimen/toolbar_padding_item"
        android:background="@drawable/bg_border_edittext"
        android:inputType="textEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_forgot_password_title" />

    <Button
        android:id="@+id/activity_forgot_password_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/toolbar_padding_item"
        android:layout_marginLeft="@dimen/toolbar_padding_item"
        android:layout_marginRight="@dimen/toolbar_padding_item"
        android:layout_marginStart="@dimen/toolbar_padding_item"
        android:layout_marginTop="@dimen/toolbar_padding_item"
        android:background="@drawable/bg_border_button"
        android:text="@string/recovery_password"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_forgot_password_email" />
</android.support.constraint.ConstraintLayout>